# sbh-project

./: .gitignore  CMakeLists.txt  README.md
include/: dijkstra.hpp  graph.hpp  runner.hpp
include/common/: dijkstra.hpp  graph.hpp
include/generator/: cli.hpp  instgen.hpp  io.hpp  runner.hpp
include/greedy-solver/: greedy.hpp
src/: cli.cpp  graph.cpp  instgen.cpp  io.cpp  main.cpp  runner.cpp
src/common/: dijkstra.cpp  graph.cpp
src/generator/: cli.cpp  instgen.cpp  io.cpp  main.cpp  runner.cpp
src/greedy-solver/: greedy.cpp
test/: test_graph.cpp  test_greedy.cpp  test_greedy_manual.cpp
